Fix DB designer dark mode colors for Bootstrap theme

--- a/public/themes/bootstrap/scss/_common.scss
+++ b/public/themes/bootstrap/scss/_common.scss
@@ -1225,7 +1225,6 @@ input#auto_increment_opt {
   position: fixed;
   top: 100px !important;
   width: 100%;
-  background: $white;
 }
 
 #table_columns {
